apps/task-control/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-control
  labels:
    app: task-control
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: task-control
