apps/task-control/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-control
  labels:
    app: task-control
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/group.name: idp-apps
spec:
  ingressClassName: alb
  rules:
    - host: task-control.softwareengineer.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-control
                port:
                  number: 80
